--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,45 +1,40 @@
 
-# Name your project! Project names should contain only lowercase characters
-# and underscores. A good package name should reflect your organization's
-# name or the intended use of these models
-name: 'my_new_project' # <-- Name of the project.
+# Projeto Engenharia de Analytics da empresa Adventure Works por Felipe Almeida.
+# Documentação completa da IDE DBT: https://docs.getdbt.com/docs/configuring-models
+name: 'dbt_adventure_works'
 version: '1.0.0'
 config-version: 2
-
-# This setting configures which "profile" dbt uses for this project.
 profile: 'default'
 
-# These configurations specify where dbt should look for different types of files.
-# The `source-paths` config, for example, states that models in this project can be
-# found in the "models/" directory. You probably won't need to change these!
+# As configurações abaixo especificam onde o DBT deve procurar por diferentes tipos de arquivos
 model-paths: ["models"]
-analysis-paths: ["analyses"]
+analysis-paths: ["analysis"]
 test-paths: ["tests"]
 seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
-target-path: "target"  # directory which will store compiled SQL files
-clean-targets:         # directories to be removed by `dbt clean`
+# As configurações abaixo especificam onde serão inseridos os arquivos SQL compilados
+# e quais pastas devem ser limpadas pelo comando "dbt clean".
+target-path: "target"  # diretório dos arquivos compilados
+clean-targets:         # diretórios a serem removidos pelo "dbt clean"
   - "target"
   - "dbt_packages"
 
-
-# Configuring models
-# Full documentation: https://docs.getdbt.com/docs/configuring-models
-
-# In this example config, we tell dbt to build all models in the example/ directory
-# as tables. These settings can be overridden in the individual model files
-# using the `{{ config(...) }}` macro.
+# Nas configurações abaixo especifica-se em quais pastas e quais modelos serão criados pelo "dbt build"
+# Essas configurações podem ser sobrescritas nos modelos individiduais pela macro `{{ config(...) }}`
 models:
-  my_new_project: # <-- Name of the project. If you renamed your project you have to change this as well
-    
-    # Applies to all files under models/example/
-    example:
-      materialized: view
+  adventureWorks:
+    sources:
+      +materialized: view
 
+    stagings:
+      +materialized: view
+
+    marts:
+      +materialized: table
 
 seeds:
-  my_new_project: # <-- Name of the project. If you renamed your project you have to change this as well
+  adventureWorks:
     sap_adventure_works:
-      +schema: sap_adw
+      +schema: aw_seeds_sap
